Update adding rename cmd for extract to const CA